fix: use valid word-spacing value in .header .left-side h1
`word-spacing: none` is invalid CSS; use `normal` instead.

--- a/style.scss
+++ b/style.scss
@@ -215,7 +215,7 @@ a:focus {
       text-transform: capitalize;
       display: inline-block;
       margin-bottom: 1.5rem;
-      word-spacing: none;
+      word-spacing: normal;
 
       @include md-size() {
         font-size: 3rem;
